@@ -2,4 +2,4 @@ See the "Issues" link at https://github.com/andy5995/Zank/issues for other known
 
 2016-07-24
 
-If the grid size is too small (e.g. X = 5 and Y = 5), there may not be enough magic rings or incriminating documents to indict and retire all the politicians.
+(Fixed 2016-08-15) If the grid size is too small (e.g. X = 5 and Y = 5), there may not be enough magic rings or incriminating documents to indict and retire all the politicians.
