@@ -1,3 +1,11 @@
+2016-08-14
+
+Different levels of strength is now assigned to different creatures
+
+Grapevines cause a random amount of damage (1 to 10)
+
+Static number of politicians placed on the map (X * Y / 6)
+
 2016-07-30
 
 Fixed #5 - When starting, player should see what's in his current location
